@@ -141,18 +141,20 @@ Sample: "ttbar"
   
 Sample: "wjets"
   Type: BACKGROUND
-  Title: "W + jets"
-  Group: "W/Z + jets"
+%   Title: "W + jets"
+%   Group: "W/Z + jets"
+  Title: "W/Z + jets"
   FillColor: 92
   LineColor: 1
   NtupleFile: "wjets"
   Smooth: TRUE
-  Regions: "HThad_4j2b"
+  Regions: "HThad_4j2b","HThad_5j3b"
   
 Sample: "zjets"
   Type: BACKGROUND
-  Title: "Z + jets"
-  Group: "W/Z + jets"
+%   Title: "Z + jets"
+%   Group: "W/Z + jets"
+  Title: "W/Z + jets"
   FillColor: 95
   LineColor: 1
   NtupleFile: "zjets"
@@ -204,6 +206,7 @@ Systematic: "wjXsec"; "zjXsec"
   OverallUp: 0.48
   OverallDown: -0.48
   Samples: wjets; zjets
+  Regions: HThad_4j2b
   Category: Theory
   
 Systematic: "stXsec"
@@ -212,6 +215,7 @@ Systematic: "stXsec"
   OverallUp:    0.05
   OverallDown: -0.05
   Samples: singleTop
+  Regions: HThad_4j2b
   Category: Theory
 
 Systematic: "ttXsec"
