@@ -724,7 +724,7 @@ void doPredictiveFit(RooNLLVar* nll, double mu1, double mu2, double mu)
   RooRealVar* var;
   int counter = 0;
   loadSnapshot(nll, mu1);
-  while ((var == (RooRealVar*)itr->Next()))
+  while ((var = (RooRealVar*)itr->Next()))
   {
     theta_mu1[counter++] = var->getVal();
   }
@@ -732,14 +732,14 @@ void doPredictiveFit(RooNLLVar* nll, double mu1, double mu2, double mu)
   itr->Reset();
   counter = 0;
   loadSnapshot(nll, mu2);
-  while ((var == (RooRealVar*)itr->Next()))
+  while ((var = (RooRealVar*)itr->Next()))
   {
     theta_mu2[counter++] = var->getVal();
   }
 
   itr->Reset();
   counter = 0;
-  while ((var == (RooRealVar*)itr->Next()))
+  while ((var = (RooRealVar*)itr->Next()))
   {
     double m = (theta_mu2[counter] - theta_mu1[counter])/(mu2-mu1);
     double b = theta_mu2[counter] - m*mu2;
